Revert "Make CAR_WIFI_SERVICE a SystemAPI"
Revert submission 26275582-car-wifi

Reason for revert: Likely culprit for b/327198700. Will be verifying through ABTD for confirmation and before submitting the revert.

Reverted changes: /q/submissionid:26275582-car-wifi

Change-Id: If824b469a66df955f59a2c027ef89e9a768f97ab