@@ -29,7 +29,7 @@ import android.car.feature.Flags;
 import android.content.Context;
 import android.os.Handler;
 import android.os.HandlerThread;
-import android.util.ArraySet;
+import android.util.ArrayMap;
 import android.util.AtomicFile;
 import android.util.Pair;
 import android.util.proto.ProtoOutputStream;
@@ -53,8 +53,9 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
-
+import java.util.Map;
 /**
  * Component controlling the feature of car.
  */
@@ -65,7 +66,10 @@ public final class CarFeatureController implements CarServiceBase {
     // We define this here for compatibility with older feature lists only
     private static final String BLUETOOTH_SERVICE = "car_bluetooth";
 
-    private static final List<String> NON_FLAGGED_MANDATORY_FEATURES = List.of(
+    // Use HaseSet for better search performance. Memory consumption is fixed and it not an issue.
+    // Should keep alphabetical order under each bucket.
+    // Update CarFeatureTest as well when this is updated.
+    private static final HashSet<String> MANDATORY_FEATURES = new HashSet<>(Arrays.asList(
             Car.APP_FOCUS_SERVICE,
             Car.AUDIO_SERVICE,
             Car.CAR_ACTIVITY_SERVICE,
@@ -79,6 +83,7 @@ public final class CarFeatureController implements CarServiceBase {
             Car.CAR_USER_SERVICE,
             Car.CAR_UX_RESTRICTION_SERVICE,
             Car.CAR_WATCHDOG_SERVICE,
+            Car.CAR_WIFI_SERVICE,
             Car.INFO_SERVICE,
             Car.PACKAGE_SERVICE,
             Car.POWER_SERVICE,
@@ -91,27 +96,9 @@ public final class CarFeatureController implements CarServiceBase {
             Car.HVAC_SERVICE,
             Car.SENSOR_SERVICE,
             Car.VENDOR_EXTENSION_SERVICE
-    );
+    ));
 
-    private static final ArraySet<String> FLAGGED_MANDATORY_FEATURES = new ArraySet<>(1);
-
-    static {
-        if (Flags.persistApSettings()) {
-            FLAGGED_MANDATORY_FEATURES.add(Car.CAR_WIFI_SERVICE);
-        }
-
-        // Note: if a new entry is added here, the capacity of FLAGGED_MANDATORY_FEATURES
-        // should also be increased.
-    }
-
-    // Use ArraySet for better search performance. Memory consumption is fixed and it not an issue.
-    // Should keep alphabetical order under each bucket.
-    // Update CarFeatureTest as well when this is updated.
-    private static final ArraySet<String> MANDATORY_FEATURES = combineFeatures(
-            NON_FLAGGED_MANDATORY_FEATURES,
-            FLAGGED_MANDATORY_FEATURES);
-
-    private static final List<String> NON_FLAGGED_OPTIONAL_FEATURES = List.of(
+    private static final HashSet<String> OPTIONAL_FEATURES = new HashSet<>(Arrays.asList(
             CarFeatures.FEATURE_CAR_USER_NOTICE_SERVICE,
             Car.CLUSTER_HOME_SERVICE,
             Car.CAR_NAVIGATION_SERVICE,
@@ -128,29 +115,18 @@ public final class CarFeatureController implements CarServiceBase {
             Car.EXPERIMENTAL_CAR_KEYGUARD_SERVICE,
             // All items below here are deprecated, but still could be supported
             Car.CAR_INSTRUMENT_CLUSTER_SERVICE
-    );
+    ));
 
-    private static final ArraySet<String> FLAGGED_OPTIONAL_FEATURES = new ArraySet<>();
-
-    static {
-        if (Flags.displayCompatibility()) {
-            FLAGGED_OPTIONAL_FEATURES.add(Car.CAR_DISPLAY_COMPAT_SERVICE);
-        }
-
-        // Note: if a new entry is added here, the capacity of FLAGGED_OPTIONAL_FEATURES
-        // should also be increased.
-    }
-
-    private static final ArraySet<String> OPTIONAL_FEATURES = combineFeatures(
-            NON_FLAGGED_OPTIONAL_FEATURES, FLAGGED_OPTIONAL_FEATURES);
+    private static final Map<String, Boolean> FLAGGED_FEATURES =
+            new ArrayMap<>(1);
 
     // This is a feature still under development and cannot be enabled in user build.
-    private static final ArraySet<String> NON_USER_ONLY_FEATURES = new ArraySet<>();
+    private static final HashSet<String> NON_USER_ONLY_FEATURES = new HashSet<>();
 
     // Features that depend on another feature being enabled (i.e. legacy API support).
     // For example, VMS_SUBSCRIBER_SERVICE will be enabled if VEHICLE_MAP_SERVICE is enabled
     // and disabled if VEHICLE_MAP_SERVICE is disabled.
-    private static final List<Pair<String, String>> SUPPORT_FEATURES = List.of(
+    private static final List<Pair<String, String>> SUPPORT_FEATURES = Arrays.asList(
             Pair.create(Car.VEHICLE_MAP_SERVICE, Car.VMS_SUBSCRIBER_SERVICE)
     );
 
@@ -163,9 +139,15 @@ public final class CarFeatureController implements CarServiceBase {
     // feature are updated in resource file, we should regenerate {@code FEATURE_CONFIG_FILE_NAME}.
     private static final String CONFIG_FILE_HASH_MARKER = "Hash:";
 
+    static {
+        FLAGGED_FEATURES.put(Car.CAR_DISPLAY_COMPAT_SERVICE, Flags.displayCompatibility());
+        // Note: if a new entry is added here, the capacity of FLAGGED_FEATURES should also
+        // be increased
+    }
+
     // Set once in constructor and not updated. Access it without lock so that it can be accessed
     // quickly.
-    private final ArraySet<String> mEnabledFeatures;
+    private final HashSet<String> mEnabledFeatures;
 
     private final Context mContext;
 
@@ -187,7 +169,7 @@ public final class CarFeatureController implements CarServiceBase {
     private final List<String> mPendingDisabledFeatures = new ArrayList<>();
 
     @GuardedBy("mLock")
-    private ArraySet<String> mAvailableExperimentalFeatures = new ArraySet<>();
+    private HashSet<String> mAvailableExperimentalFeatures = new HashSet<>();
 
     public CarFeatureController(@NonNull Context context,
             @NonNull String[] defaultEnabledFeaturesFromConfig,
@@ -201,7 +183,7 @@ public final class CarFeatureController implements CarServiceBase {
         mDisabledFeaturesFromVhal = Arrays.asList(disabledFeaturesFromVhal);
         Slogf.i(TAG, "mDefaultEnabledFeaturesFromConfig:" + mDefaultEnabledFeaturesFromConfig
                 + ",mDisabledFeaturesFromVhal:" + mDisabledFeaturesFromVhal);
-        mEnabledFeatures = new ArraySet<>(MANDATORY_FEATURES);
+        mEnabledFeatures = new HashSet<>(MANDATORY_FEATURES);
         mFeatureConfigFile = new AtomicFile(new File(dataDir, FEATURE_CONFIG_FILE_NAME));
         boolean shouldLoadDefaultConfig = !AtomicFileHelper.exists(mFeatureConfigFile);
         if (!shouldLoadDefaultConfig) {
@@ -289,33 +271,27 @@ public final class CarFeatureController implements CarServiceBase {
     @Override
     @ExcludeFromCodeCoverageGeneratedReport(reason = DUMP_INFO)
     public void dumpProto(ProtoOutputStream proto) {
-        for (int i = 0; i < mEnabledFeatures.size(); i++) {
-            String enabledFeature = mEnabledFeatures.valueAt(i);
+        for (String enabledFeature : mEnabledFeatures) {
             proto.write(CarFeatureControlDumpProto.ENABLED_FEATURES, enabledFeature);
         }
-        for (int i = 0; i < mDefaultEnabledFeaturesFromConfig.size(); i++) {
-            String defaultEnabledFeature = mDefaultEnabledFeaturesFromConfig.get(i);
+        for (String defaultEnabledFeature : mDefaultEnabledFeaturesFromConfig) {
             proto.write(CarFeatureControlDumpProto.DEFAULT_ENABLED_FEATURES_FROM_CONFIG,
                     defaultEnabledFeature);
         }
-        for (int i = 0; i < mDisabledFeaturesFromVhal.size(); i++) {
-            String disabledFeature = mDisabledFeaturesFromVhal.get(i);
+        for (String disabledFeature : mDisabledFeaturesFromVhal) {
             proto.write(CarFeatureControlDumpProto.DISABLED_FEATURES_FROM_VHAL,
                     disabledFeature);
         }
         synchronized (mLock) {
-            for (int i = 0; i < mAvailableExperimentalFeatures.size(); i++) {
-                String experimentalFeature = mAvailableExperimentalFeatures.valueAt(i);
+            for (String experimentalFeature : mAvailableExperimentalFeatures) {
                 proto.write(CarFeatureControlDumpProto.AVAILABLE_EXPERIMENTAL_FEATURES,
                         experimentalFeature);
             }
-            for (int i = 0; i < mPendingEnabledFeatures.size(); i++) {
-                String pendingEnabledFeature = mPendingEnabledFeatures.get(i);
+            for (String pendingEnabledFeature : mPendingEnabledFeatures) {
                 proto.write(CarFeatureControlDumpProto.PENDING_ENABLED_FEATURES,
                         pendingEnabledFeature);
             }
-            for (int i = 0; i < mPendingDisabledFeatures.size(); i++) {
-                String pendingDisabledFeature = mPendingDisabledFeatures.get(i);
+            for (String pendingDisabledFeature : mPendingDisabledFeatures) {
                 proto.write(CarFeatureControlDumpProto.PENDING_DISABLED_FEATURES,
                         pendingDisabledFeature);
             }
@@ -329,10 +305,9 @@ public final class CarFeatureController implements CarServiceBase {
 
     private boolean checkMandatoryFeaturesLocked() {
         // Ensure that mandatory features are always there
-        for (int i = 0; i < MANDATORY_FEATURES.size(); i++) {
-            String mandatoryFeature = MANDATORY_FEATURES.valueAt(i);
-            if (!mEnabledFeatures.contains(mandatoryFeature)) {
-                Slogf.e(TAG, "Mandatory feature missing in mEnabledFeatures:" + mandatoryFeature);
+        for (String feature: MANDATORY_FEATURES) {
+            if (!mEnabledFeatures.contains(feature)) {
+                Slogf.e(TAG, "Mandatory feature missing in mEnabledFeatures:" + feature);
                 return false;
             }
         }
@@ -465,15 +440,14 @@ public final class CarFeatureController implements CarServiceBase {
             return Collections.emptyList();
         }
         ArrayList<String> experimentalFeature = new ArrayList<>();
-        for (int i = 0; i < mEnabledFeatures.size(); i++) {
-            String enabledFeature = mEnabledFeatures.valueAt(i);
-            if (MANDATORY_FEATURES.contains(enabledFeature)) {
+        for (String feature: mEnabledFeatures) {
+            if (MANDATORY_FEATURES.contains(feature)) {
                 continue;
             }
-            if (OPTIONAL_FEATURES.contains(enabledFeature)) {
+            if (OPTIONAL_FEATURES.contains(feature)) {
                 continue;
             }
-            experimentalFeature.add(enabledFeature);
+            experimentalFeature.add(feature);
         }
         return experimentalFeature;
     }
@@ -495,7 +469,7 @@ public final class CarFeatureController implements CarServiceBase {
             return false;
         }
         try (BufferedReader reader =
-                     new BufferedReader(new InputStreamReader(fis, StandardCharsets.UTF_8))) {
+                new BufferedReader(new InputStreamReader(fis, StandardCharsets.UTF_8))) {
             boolean lastLinePassed = false;
             boolean hashChecked = false;
             while (true) {
@@ -562,7 +536,7 @@ public final class CarFeatureController implements CarServiceBase {
         return true;
     }
 
-    private void persistToFeatureConfigFile(ArraySet<String> features) {
+    private void persistToFeatureConfigFile(HashSet<String> features) {
         removeSupportFeatures(features);
         synchronized (mLock) {
             features.removeAll(mPendingDisabledFeatures);
@@ -580,8 +554,7 @@ public final class CarFeatureController implements CarServiceBase {
                 writer.write(CONFIG_FILE_HASH_MARKER
                         + mDefaultEnabledFeaturesFromConfig.hashCode());
                 writer.newLine();
-                for (int i = 0; i < features.size(); i++) {
-                    String feature = features.valueAt(i);
+                for (String feature : features) {
                     writer.write(feature);
                     writer.newLine();
                 }
@@ -601,25 +574,28 @@ public final class CarFeatureController implements CarServiceBase {
 
     private void dispatchDefaultConfigUpdate() {
         mHandler.removeCallbacksAndMessages(null);
-        ArraySet<String> featuresToPersist = new ArraySet<>(mEnabledFeatures);
+        HashSet<String> featuresToPersist = new HashSet<>(mEnabledFeatures);
         mHandler.post(() -> persistToFeatureConfigFile(featuresToPersist));
     }
 
     private void parseDefaultConfig() {
-        for (int i = 0; i < mDefaultEnabledFeaturesFromConfig.size(); i++) {
-            String defaultEnabledFeature = mDefaultEnabledFeaturesFromConfig.get(i);
-            if (mDisabledFeaturesFromVhal.contains(defaultEnabledFeature)) {
+        for (String feature : mDefaultEnabledFeaturesFromConfig) {
+            if (mDisabledFeaturesFromVhal.contains(feature)) {
                 continue;
             }
-            if (OPTIONAL_FEATURES.contains(defaultEnabledFeature)) {
-                mEnabledFeatures.add(defaultEnabledFeature);
-            } else if (NON_USER_ONLY_FEATURES.contains(defaultEnabledFeature)) {
+            if (OPTIONAL_FEATURES.contains(feature)) {
+                mEnabledFeatures.add(feature);
+            } else if (NON_USER_ONLY_FEATURES.contains(feature)) {
                 Slogf.e(TAG, "config_default_enabled_optional_car_features including "
-                        + "user build only feature, will be ignored:" + defaultEnabledFeature);
+                        + "user build only feature, will be ignored:" + feature);
+            } else if (FLAGGED_FEATURES.containsKey(feature)) {
+                if (FLAGGED_FEATURES.get(feature)) {
+                    mEnabledFeatures.add(feature);
+                }
             } else {
                 throw new IllegalArgumentException(
                         "config_default_enabled_optional_car_features include non-optional "
-                                + "features:" + defaultEnabledFeature);
+                                + "features:" + feature);
             }
         }
         Slogf.i(TAG, "Loaded default features:" + mEnabledFeatures);
@@ -635,12 +611,5 @@ public final class CarFeatureController implements CarServiceBase {
         SUPPORT_FEATURES.stream()
                 .filter(entry -> features.contains(entry.first))
                 .forEach(entry -> features.remove(entry.second));
-    }
-
-    private static ArraySet<String> combineFeatures(List<String> features,
-            ArraySet<String> flaggedFeatures) {
-        ArraySet<String> combinedFeatures = new ArraySet<>(features);
-        combinedFeatures.addAll(flaggedFeatures);
-        return combinedFeatures;
     }
 }
